# embsys-project

./: CMakeLists.txt
include/: audio_helper.h  error_helper.h  face_detect.h  helper.h  mqtt_client.h  mysql_helper.h
scripts/: sm_audio.service  smarthome.service
src/: audio_manager.cpp  ble_manager.cpp  face_detect.cpp  http_server.cpp  main.cpp  main_sub.cpp  mqtt_client.cpp  mqtt_server.cpp  tmp_main.cpp
